--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,7 @@
                 <action android:name="restartservice" />
             </intent-filter>
         </receiver>
-        <service android:name=".TestServices" android:exported="true"/>
+        <service android:name=".TestServices" android:exported="true" android:enabled="true"/>
     </application>
 
 </manifest>
